<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.SelectChainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.iitp.iitp_demo.activity.SelectChainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_appbar" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:checkedButton="@{activity.radioCheck}"
            android:onCheckedChanged="@{activity.onSplitTypeChanged}"
            android:orientation="vertical"
            android:paddingStart="30dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.187"
            tools:layout_editor_absoluteX="0dp">

            <RadioButton
                android:id="@+id/rg_btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/etri2"
                android:onClick="@{()->activity.onClickRadioBtn()}"
                android:text="@string/metadium" />

            <RadioButton
                android:id="@+id/rg_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/etri2"
                android:onClick="@{()->activity.onClickRadioBtn()}"
                android:text="@string/icon" />

            <RadioButton
                android:id="@+id/rg_btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/etri2"
                android:onClick="@{()->activity.onClickRadioBtn()}"
                android:text="@string/indy" />


        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>