<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    tools:context=".activity.FinishGenerateIdCredentialActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.iitp.iitp_demo.activity.FinishGenerateOfficeCredentialActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_appbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/finish_office_credential"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout_editor_absoluteX="0dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:id="@+id/id_credential"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:background="@drawable/listviewborder"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name1"
                        android:textColor="@color/blackAlpahText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@{activity.name}"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/position1"
                        android:textColor="@color/blackAlpahText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/postionTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@{activity.title1}"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/office1"
                        android:textColor="@color/blackAlpahText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/officeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@{activity.department}"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/address1"
                        android:textColor="@color/blackAlpahText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/addressTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@{activity.address}"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/regist_date1"
                        android:textColor="@color/blackAlpahText"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/registDateTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@{activity.startDate}" />
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/signature2" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/listviewborder"

                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/office_credential1"
                android:textColor="@color/blackText"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>


        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/btnRipple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:mrl_rippleColor="@color/color2"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="16dp">

            <Button
                style="@style/AppTheme.PrimarySmallButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->activity.btnClick()}"
                android:text="@string/ok"
                android:textSize="16sp" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>