<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout2"
    tools:context=".activity.CheckOutCredentialActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/checkout_message"
            android:textColor="@color/blackText"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/backcolor"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/info_self"
                    android:textColor="@color/blackText"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name1"
                        android:textColor="@color/blackAlpahText"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:textColor="@color/blackAlpahText"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/idnumber1"
                        android:textColor="@color/blackAlpahText"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/idnumberTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:textColor="@color/blackAlpahText"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/address1"
                        android:textColor="@color/blackAlpahText"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/addressTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text=""
                        android:textColor="@color/blackAlpahText"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/backcolor"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.132">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:text="@string/did"
                    android:textColor="@color/blackText"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textColor="@color/blackAlpahText" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/yesRipple"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/noRipple"
            app:mrl_rippleColor="@color/color2"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="16dp">

            <Button
                android:id="@+id/yesBtn"
                style="@style/AppTheme.PrimarySmallButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/yes"
                android:textSize="16sp" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/noRipple"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:mrl_rippleColor="@color/color2"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="16dp">

            <Button
                android:id="@+id/noBtn"
                style="@style/AppTheme.PrimarySmallButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no"
                android:textSize="16sp"

                />
        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>